overrides.less bugfix font-weight for badges
The font-weight for the badges was set to 700. This causes under
windows a blurry text.

The font-weight is set to 400 which is normal.

--- a/invenio_theme_tugraz/assets/semantic-ui/less/invenio_theme_tugraz/overrides.less
+++ b/invenio_theme_tugraz/assets/semantic-ui/less/invenio_theme_tugraz/overrides.less
@@ -116,3 +116,10 @@ pre {
   background-color: unset;
   box-shadow: unset;
 }
+
+/***
+ * force: font weight: normal
+ ***/
+.ui.label {
+  font-weight: 400;
+}
